--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Prubeas</h1>
+    <h1>Pruebas</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed voluptatibus at, a, soluta unde, qui quaerat commodi aliquid optio dignissimos ratione maiores neque doloremque adipisci placeat voluptate perspiciatis perferendis. Omnis!</p>
     <p>Holaaaaaaaa</p>
 </body>
