--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Pruebas</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed voluptatibus at, a, soluta unde, qui quaerat commodi aliquid optio dignissimos ratione maiores neque doloremque adipisci placeat voluptate perspiciatis perferendis. Omnis!</p>
     <p>Holaaaaaaaa</p>
+    <p>Parrafo main</p>
     <ol>
         <li>Manzana</li>
         <li>Naranja</li>
